e.g. in your .Rprofile file or from the 'Select CRAN mirror' menu
item.  (In batch use, not having set a mirror will lead to an error.)
BDR's supplementary collection is now included in the default
options("CRAN"): if you want to include it explicitly set something like
options(CRAN=c(some_cran_mirror, http://www.stats.ox.ac.uk/pub/RWin"))

The new (in R 2.0.0) graphics pars "lend", "ljoin" and "lmitre" are
now implemented for the Windows devices.

`Writing R Extensions' now documents how to interface a front-end
directly to R.dll, and there are some new convenience functions for
such front-ends.

R CMD / Rcmd now set HOME if unset, e.g. for use in Rcmd check.

The installer now offers the option of a `quick launch icon" for R
(by default unchecked).

par(ask = TRUE) now takes input from the graphics window, rather than
from the console.

Rcmd REMOVE works more similarly to Unix, setting the default library
from R_LIBS if the latter is set.

install.packages() can install source packages as well as binary ones.

shQuote() now defaults to type="cmd" on Windows.

R can now be built with Unicode support on Win9x and WinME.  See
src/gnuwin32/MkRules.

R can now be built with support for multibyte and variable-width
character sets, e.g. for Japanese. See README.rw????.

select.list() now looks up the current font size and chooses its
window size based on that.

The instructions for compiling packages from source and for
compiling R itself have been moved to the R Installation and 
Administration manual; the PDF copy of that manual has been added
to the Rgui Help | Manuals menu list.



R 2.0.1 patched
===============

We work around reported bugs in Windows XP as to which characters are
printable by attempting to print all non-control characters when using
print().

There are now facilities (documented in file src/gnuwin32/INSTALL) to
add packages when building the R installer, and to rebuild a
customized installer from the existing binary distribution.
